Fixed subtasks gap

--- a/src/app/features/board/components/task-detail-dialog/task-detail-dialog-edit.scss
+++ b/src/app/features/board/components/task-detail-dialog/task-detail-dialog-edit.scss
@@ -325,7 +325,6 @@ textarea.input {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 32px;
   padding: 4px 8px;
   border-radius: 8px;
   font-size: 16px;
@@ -480,6 +479,7 @@ textarea.input {
 .subtask-list {
   display: flex;
   flex-direction: column;
+  gap: 6px;
 }
 
 @media (max-width: 550px) {
