--- a/src/app/features/board/components/task-detail-dialog/task-detail-dialog-view.scss
+++ b/src/app/features/board/components/task-detail-dialog/task-detail-dialog-view.scss
@@ -87,7 +87,6 @@
   display: flex;
   align-items: center;
   gap: 16px;
-  height: 24px;
   width: 100%;
   padding-left: 16px;
   font-size: 16px;
